--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
     "@videogular/ngx-videogular": "^8.0.0",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.8.0",
